# XingQuDaoCourseCrawler

./: .gitignore  README.md  main.py  pyproject.toml
src/xingqudao_crawler/: __init__.py  cli.py  config.py  crawler.py  exceptions.py
tests/: test_config.py  test_crawler.py
