[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xingqudao-crawler"
version = "0.1.0"
description = "XingQuDao VOD crawler that downloads ts streams and merges into mp4"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "aiohttp>=3.10.0",
  "beautifulsoup4>=4.12.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[project.scripts]
xingqudao-crawler = "xingqudao_crawler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
